--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />    
     <link rel="stylesheet" href="https://bootswatch.com/4/darkly/bootstrap.min.css">    
-    <title>StarDB</title>
+    <title>Star Wars App</title>
   </head>
   <body>    
     <div id="root">
